2007-12-01  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - test for <rdar://problem/5619240> REGRESSION (Leopard-r28069): Reproducible crash with a Mootools-based calendar picker (jump to null in FrameView::layout)

        * fast/dynamic/subtree-common-root-expected.txt: Added.
        * fast/dynamic/subtree-common-root.html: Added.

2007-11-30  Eric Seidel  <eric@webkit.org>

        Reviewed by darin.
        
        Test case for:
        http://bugs.webkit.org/show_bug.cgi?id=16127

        * fast/js/regexp-compile-crash-expected.txt: Added.
        * fast/js/regexp-compile-crash.html: Added.

2007-11-30  Adam Roben  <aroben@apple.com>

        Copy some cross-platform results into platform/win to avoid picking up the platform/mac versions

        * platform/win/fast/dom/Window/window-resize-expected.txt: Copied from LayoutTests/fast/dom/Window/window-resize-expected.txt.
        * platform/win/fast/dom/wrapper-classes-expected.txt: Copied from LayoutTests/fast/dom/wrapper-classes-expected.txt.

2007-11-30  Darin Adler  <darin@apple.com>

        Reviewed by Adam Roben.

        - test for http://bugs.webkit.org/show_bug.cgi?id=16207
          JavaScript regular expressions should match UTF-16 code units rather than characters

        * fast/js/regexp-non-bmp-expected.txt: Added.
        * fast/js/regexp-non-bmp.html: Added.
        * fast/js/resources/regexp-non-bmp.js: Added.

2007-11-30  Adele Peterson  <adele@apple.com>

        Reviewed by Darin.

        Test for http://bugs.webkit.org/show_bug.cgi?id=16072
        <rdar://problem/5463821> REGRESSION: Mousemove event isn't fired when mouse moves over scrollbar with pressed button

        * fast/events/mousemove-after-drag-over-scrollbar-expected.txt: Added.
        * fast/events/mousemove-after-drag-over-scrollbar.html: Added.

2007-11-30  Alexey Proskuryakov  <ap@webkit.org>

        * platform/win/Skipped: Added editing/selection/5241148.html, which crashes for me.
