@@ -1,8 +1,10 @@
 CONSOLE MESSAGE: line 1: Refused to set unsafe header ACCEPT-CHARSET
 CONSOLE MESSAGE: line 1: Refused to set unsafe header ACCEPT-ENCODING
+CONSOLE MESSAGE: line 1: Refused to set unsafe header CONNECTION
 CONSOLE MESSAGE: line 1: Refused to set unsafe header CONTENT-LENGTH
-CONSOLE MESSAGE: line 1: Refused to set unsafe header EXPECT
+CONSOLE MESSAGE: line 1: Refused to set unsafe header CONTENT-TRANSFER-ENCODING
 CONSOLE MESSAGE: line 1: Refused to set unsafe header DATE
+CONSOLE MESSAGE: line 1: Refused to set unsafe header EXPECT
 CONSOLE MESSAGE: line 1: Refused to set unsafe header HOST
 CONSOLE MESSAGE: line 1: Refused to set unsafe header KEEP-ALIVE
 CONSOLE MESSAGE: line 1: Refused to set unsafe header REFERER
@@ -11,6 +13,9 @@ CONSOLE MESSAGE: line 1: Refused to set unsafe header TRAILER
 CONSOLE MESSAGE: line 1: Refused to set unsafe header TRANSFER-ENCODING
 CONSOLE MESSAGE: line 1: Refused to set unsafe header UPGRADE
 CONSOLE MESSAGE: line 1: Refused to set unsafe header VIA
+CONSOLE MESSAGE: line 1: Refused to set unsafe header Proxy-
+CONSOLE MESSAGE: line 1: Refused to set unsafe header Proxy-test
+CONSOLE MESSAGE: line 1: Refused to set unsafe header PROXY-FOO
 Test that setRequestHeader cannot be used to alter security-sensitive headers.
 
 SUCCESS
